testsuite/tests/rename/should_fail/T14591.stderr

T14591.hs:11:23: error: Variable not in scope: x
